JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/fields/AI_Suggested_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Action__c</fullName>
    <label>AI Suggested Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>