JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/fields/First_Aid_Guide__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Guide__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Aid Guide</label>
    <referenceTo>First_Aid__c</referenceTo>
    <relationshipLabel>Emergency Cases</relationshipLabel>
    <relationshipName>Emergency_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>