JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Emergency Cases</relationshipLabel>
    <relationshipName>Emergency_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>