JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/validationRules/EndDate_Must_Be_After_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Must_Be_After_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>