JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/validationRules/Location_must_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_must_be_filled</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Location__c)</errorConditionFormula>
    <errorMessage>Location is required</errorMessage>
</ValidationRule>