JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/validationRules/Patient_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Patient__c)</errorConditionFormula>
    <errorMessage>Select a Patient for this Emergency Case</errorMessage>
</ValidationRule>