JeevanRakshak/force-app/main/default/objects/Emergency_Case__c/validationRules/Valid_Contact_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Contact_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(REGEX(Patient__r.Contact_Number__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Mobile number must be exactly 10 digits.</errorMessage>
</ValidationRule>